@@ -1,3 +1,11 @@
+Thu Mar 31 22:34:22 CEST 2005  Patrik Weiskircher <pat@icore.at>
+
+	* Added new define SILC_MACOSX, if __APPLE__ and __MACH__ is defined.
+          Affected file: includes/silcincludes.h.in
+
+	* bool is defined as _Bool on Mac OS X now.
+          Affected file: lib/silcutil/silctypes.h
+
 Thu Mar 31 08:52:06 EEST 2005  Pekka Riikonen <priikone@silcnet.org>
 
 	* Added support for UTF-8 nicknames, channel names and
